# PaymentSystemOOP

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  DEVELOPER_GUIDE.md  LICENSE  LOGGING_IMPLEMENTATION_GUIDE.md  Makefile  README.md  TEST_RUNNER_README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  setup.cfg  test_runner.py
.github/: CODEOWNERS  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: check-existing-issue.js  close-ci-issues.js  close-success-issue.js  create-failure-issue.js  create-or-update-issue.js  download-artifacts.js  get-jobs-details.js  get-workflow-details.js
.github/workflows/: ci-cd.yml  code-quality.yml  create-issues-on-failure.yml  dependency-updates.yml  deploy.yml  github-actions.yml
docs/: ODOO_ARCHITECTURE_ANALYSIS.md
src/: __init__.py  __version__.py  main.py  main_db_demo.py
src/core/: base.py  exceptions.py
src/models/: admin.py  customer.py  item.py  order.py  sqlalchemy_models.py  user.py
src/order/: item.py  order.py
src/payment/: credit_card.py  crypto.py  exceptions.py  payment_strategy.py  paypal.py
src/payment/methods/: credit_card.py  crypto.py  paypal.py
src/services/: db_order_service.py  payment_factory.py  payment_processor.py
src/user/: admin.py  customer.py  user.py
src/utils/: db_config.py  db_session.py  init_db.py  logger.py  test_db_crud.py
test_results/: errors.txt  failed.txt  full_output.txt  index.html  skipped.txt  success.txt  summary.txt  warnings.txt
tests/: test_abc.py  test_creditcard.py  test_crypto.py  test_order.py  test_paypal.py  test_usercreation.py
tests/test_results/: errors.txt  failed.txt  full_output.txt  index.html  skipped.txt  success.txt  summary.txt  warnings.txt
tests/unit/: test_abc.py  test_credit_card.py  test_crypto.py  test_order.py  test_payment_factory.py  test_payment_processor.py  test_paypal.py  test_user.py
