[metadata]
name = payment-system-oop
version = 1.0.0
description = Object-Oriented Payment System with comprehensive test runner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ioulasri/PaymentSystemOOP
author = ioulasri, hamzaouadia
author_email = imad.oulasri01@gmail.com, ouadia.h.dev@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    pytest>=7.0.0
    pytest-cov>=4.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=23.0.0
    flake8>=6.0.0
    isort>=5.12.0
    mypy>=1.0.0
    bandit>=1.7.0
    safety>=2.0.0
    pre-commit>=3.0.0
    build>=0.10.0
test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0

[options.entry_points]
console_scripts =
    run-tests = test_runner:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .venv,
    venv
per-file-ignores =
    __init__.py:F401
    tests/*:S101

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-tests.*]
disallow_untyped_defs = False

[mypy-coinaddrvalidator]
ignore_missing_imports = True

[pydocstyle]
# Ignore common docstring style issues during development
ignore = D100,D101,D102,D104,D105,D107,D200,D202,D205,D212,D415
# D100: Missing docstring in public module
# D101: Missing docstring in public class
# D102: Missing docstring in public method
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
# D107: Missing docstring in __init__
# D200: One-line docstring should fit on one line
# D202: No blank lines allowed after function docstring
# D205: 1 blank line required between summary line and description
# D212: Multi-line docstring summary should start at the first line
# D415: First line should end with a period, question mark, or exclamation point
